# fiber

./: .clang-format  CMakeLists.txt  LICENSE  LICENSE.md  README.md  citation.md
.github/workflows/: ci.yml
src/: main.cpp  util.cpp  util.hpp
src/Events/: Selection.cpp  Selection.hpp  editorEvents.cpp  editorEvents.hpp
src/Graphics/: editorView.cpp  editorView.hpp
src/Handlers/: EventHandler.cpp  EventHandler.hpp
src/TextCursor/: TextCursor.cpp  TextCursor.hpp
src/textDocument/: doc.cpp  doc.hpp
